@@ -325,7 +325,8 @@ Extension modules
 - posix.lchown, posix.killpg, posix.mknod, and posix.getpgid have been
   added where available.
 
-- The locale module now exposes the C library's gettext interface.
+- The locale module now exposes the C library's gettext interface. It
+  also has a new function getpreferredencoding.
 
 - A security hole ("double free") was found in zlib-1.1.3, a popular
   third party compression library used by some Python modules.  The
